src/test/ui/parser/variadic-ffi-4.stderr
error[E0743]: only foreign functions are allowed to be C-variadic
  --> $DIR/variadic-ffi-4.rs:1:29
   |
LL | extern "C" fn foo(x: isize, ...) {
   |                             ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0743`.
